--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <section class="section3">
 
-      <div class="section3-img"><img src="..\main_page\img\sec03.svg" alt=""></div>
+      <div class="section3-img"><img src=".\img\sec03.svg" alt=""></div>
       <div class="content-box3">
         <h1 class="box3 title-med">Leading healthcare providers</h1> 
         <div class="box3 rectangle"></div>
